--- a/ATH/Web.config
+++ b/ATH/Web.config
@@ -20,12 +20,25 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  
   <system.web>
+    
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/404.html"/>
+    </customErrors>
+    
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.6"/>
     <httpRuntime targetFramework="4.6"/>
   </system.web>
+  
   <system.webServer>
+
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404"/>
+      <error statusCode="404" path="404.html" responseMode="File"/>
+    </httpErrors>
+    
     <modules>
       <remove name="FormsAuthentication"/>
       <remove name="TelemetryCorrelationHttpModule"/>
@@ -34,6 +47,7 @@
         preCondition="integratedMode,managedHandler"/>
     </modules>
   </system.webServer>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
