Add login functionality

--- a/ATH/Web.config
+++ b/ATH/Web.config
@@ -14,7 +14,7 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ATH-20210608121446.mdf;Initial Catalog=aspnet-ATH-20210608121446;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ATH-LOCAL" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ATH-LOCAL.mdf;Initial Catalog=ATH-LOCAL;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
