--- a/ATH/ATH.csproj
+++ b/ATH/ATH.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
+    <Compile Include="Common\TrackExecutionTime.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -189,8 +190,13 @@
     <Compile Include="Migrations\202106091446288_InitialModel.Designer.cs">
       <DependentUpon>202106091446288_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202106150653020_AddFirstAndLastNameColumnsInUsers.cs" />
+    <Compile Include="Migrations\202106150653020_AddFirstAndLastNameColumnsInUsers.Designer.cs">
+      <DependentUpon>202106150653020_AddFirstAndLastNameColumnsInUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\AddPhoneNumberViewModel.cs" />
@@ -220,6 +226,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Data\Data.txt" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -304,6 +311,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202106091446288_InitialModel.resx">
       <DependentUpon>202106091446288_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106150653020_AddFirstAndLastNameColumnsInUsers.resx">
+      <DependentUpon>202106150653020_AddFirstAndLastNameColumnsInUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
